# ors

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: screenshots.md
ors-common/: Cargo.toml
ors-common/src/: asm.rs  frame_buffer.rs  lib.rs  memory_map.rs  non_contiguous.rs
ors-kernel/: Cargo.toml  asm.s  build.rs  x86_64-unknown-none-ors.json
ors-kernel/.cargo/: config.toml
ors-kernel/src/: acpi.rs  allocator.rs  console.rs  context.rs  cpu.rs  devices.rs  fs.rs  global.rs  graphics.rs  interrupts.rs  logger.rs  main.rs  memory_manager.rs  page_table.rs  paging.rs  panic_handler.rs  pci.rs  phys_memory.rs  print.rs  qemu.rs  segmentation.rs  segments.rs  serial.rs  shell.rs  sync.rs  task.rs  x64.rs
ors-kernel/src/console/: ansi.rs  kbd.rs  screen.rs  theme.rs
ors-kernel/src/devices/: pci.rs  serial.rs  virtio.rs
ors-kernel/src/devices/virtio/: block.rs  configuration.rs  queue.rs
ors-kernel/src/fs/: fat.rs  volume.rs
ors-kernel/src/fs/fat/: boot_sector.rs  dir_entry.rs  fat_entry.rs  low_level.rs
ors-kernel/src/fs/volume/: virtio.rs
ors-kernel/src/graphics/: color.rs  console.rs  font.rs  frame_buffer.rs  rect.rs  text_buffer.rs
ors-kernel/src/sync/: lazy.rs  mutex.rs  once.rs  queue.rs  spin.rs
ors-loader/: Cargo.toml
ors-loader/src/: fs.rs  main.rs
qemu/: OVMF_VARS.fd  make_and_run.sh  make_and_run_image.sh  make_image.sh  run_image.sh
