[package]
edition = "2018"
name = "ors-kernel"
version = "0.1.0"

[dependencies]
derive-new = {version = "0.5", default-features = false}
heapless = "0.7"
log = {version = "0.4", default-features = false}
modular-bitfield = "0.11"
ors-common = {path = "../ors-common"}
spin = "0.9"
static_assertions = "1"
uart_16550 = "0.2"
x86_64 = "0.14"
