[package]
edition = "2018"
name = "ors-kernel"
version = "0.1.0"

[dependencies]
bit_field = "0.10"
derive-new = {version = "0.5", default-features = false}
heapless = "0.7"
log = {version = "0.4", default-features = false}
ors-common = {path = "../ors-common"}
spin = "0.9"
static_assertions = "1"
uart_16550 = "0.2"
x86_64 = "0.14"
