[package]
edition = "2018"
name = "ors-kernel"
version = "0.1.0"

[dependencies]
acpi = "4"
bit_field = "0.10"
derive-new = {version = "0.5", default-features = false}
heapless = "0.7"
libm = "0.2"
log = {version = "0.4", default-features = false}
ors-common = {path = "../ors-common"}
pc-keyboard = "0.5"
spin = "0.9"
static_assertions = "1"
uart_16550 = "0.2"
x86_64 = "0.14"
